--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -15,21 +15,16 @@
 <body class="isLoading">
 <header class="header white">
     <div class="header__container">
-        <nav class="header__menu">
-            <ul>
-                <li class="header__menu-item"><a href="#">Услуги</a></li>
-                <li class="header__menu-item"><a href="#">цены</a></li>
-                <li class="header__menu-item"><a href="#">Проекты</a></li>
-                <li class="header__menu-item"><a href="#">О нас</a></li>
-                <li class="header__menu-item"><a href="#">Контакты</a></li>
-            </ul>
-        </nav>
         <div class="mob-header-icon">
             <svg class="mob-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M3 5H21" stroke="#FFFEF8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M3 12H21" stroke="#FFFEF8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M3 19H21" stroke="#FFFEF8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
+        </div>
+        <div class="mob-cross close-menu">
+            <div class="mob-cross-line"></div>
+            <div class="mob-cross-line"></div>
         </div>
         <a href="#" class="logo">
             <svg class="logo-top" viewBox="0 0 140 35" xmlns="http://www.w3.org/2000/svg">
@@ -53,6 +48,36 @@
             </svg>
         </div>
     </div>
+    <div class="mobile-menu">
+        <nav class="header__menu">
+            <ul>
+                <li class="header__menu-item"><a href="#">Услуги</a></li>
+                <li class="header__menu-item"><a href="#">цены</a></li>
+                <li class="header__menu-item"><a href="#">Проекты</a></li>
+                <li class="header__menu-item"><a href="#">О нас</a></li>
+                <li class="header__menu-item"><a href="#">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="mobile-menu__phone"><div>+7 963 77 9999 2</div></div>
+        <div class="mobile-menu__city"><div>Санкт-Петербург</div></div>
+        <div class="mobile-menu__gray-line"></div>
+        <div class="mobile-menu__button-anchor black-button">
+            <div class="main-view__button-text-wrapper">
+                <div class="main-view__button-text">оставить<br/>заявку</div>
+            </div>
+            <div class="main-view__arrow-wrapper">
+                <div class="main-view__arrow">
+                    <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="animation-button-height">
+                <div class="round-button"></div>
+            </div>
+        </div>
+    </div>
 </header>
 <div id="loading-section">
     <div class="logo">
@@ -74,7 +99,7 @@
                 <div class="project__content">
                     <div class="project__title">
                         <div class="slide-down-in-view__container">
-                            <div class="slide-down-in-view duration-1 animation-delay-05">
+                            <div class="slide-down-in-view duration-1">
                                 White Khamovniki
                             </div>
                         </div>
@@ -82,14 +107,14 @@
                     <div class="project__props">
                         <div class="project__props-left">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1 animation-delay-05">
+                                <div class="slide-up-in-view duration-1">
                                     2021<span class="dot"></span>55 м<span class="degree">2</span>
                                 </div>
                             </div>
                         </div>
                         <div class="project__props-right">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1 animation-delay-1">
+                                <div class="slide-up-in-view duration-1">
                                     Оформление квартиры
                                 </div>
                             </div>
@@ -109,11 +134,11 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="animation-button-height animation-height animation-delay-1">
+                        <div class="animation-button-height animation-height">
                             <div class="round-button"></div>
                         </div>
                     </div>
-                    <div class="project__gray-line"></div>
+                    <div class="project__gray-line"><div class="gray-line"></div></div>
                 </div>
                 <div class="project__bg">
                     <img src="../assets/images/project1.png" alt="">
@@ -128,7 +153,7 @@
                     <div class="project-details__top">
                         <div class="project-details__title">
                             <div class="slide-down-in-view__container">
-                                <div class="slide-down-in-view duration-1">
+                                <div class="slide-down-in-view150 duration-1">
                                     детально<br>
                                     о реализации проекта<br>
                                     White Khamovniki
@@ -137,17 +162,17 @@
                         </div>
                         <div class="project-details__button-anchor black-button mid-size">
                             <div class="main-view__button-text-wrapper">
-                                <div class="main-view__button-text animation-delay-15">оставить<br> заявку</div>
+                                <div class="main-view__button-text">оставить<br> заявку</div>
                             </div>
                             <div class="main-view__arrow-wrapper">
-                                <div class="main-view__arrow animation-delay-15">
+                                <div class="main-view__arrow">
                                     <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                         <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                     </svg>
                                 </div>
                             </div>
-                            <div class="animation-button-height animation-delay-15">
+                            <div class="animation-button-height">
                                 <div class="round-button"></div>
                             </div>
                         </div>
@@ -157,7 +182,7 @@
                         <div class="project-details__left">
                             <div class="project-details__left-text">
                                 <div class="slide-up-in-view__container">
-                                    <div class="slide-up-in-view duration-1 animation-delay-05">
+                                    <div class="slide-up-in-view duration-1">
                                         Лаконичность, функциональность
                                         и изысканная брутальность – именно так можно описать эту квартиру
                                     </div>
@@ -207,17 +232,17 @@
                         <div class="project-description__top-text">Москва</div>
                     </div>
                     <div class="project-description__top-right">
-                        <div class="project-description__top-item animation-delay-08">
+                        <div class="project-description__top-item">
                             <div class="project-description__top-title">площадь</div>
                             <div class="project-description__top-text">
                                 55 м<span class="project-description__top-text-upper">2</span>
                             </div>
                         </div>
-                        <div class="project-description__top-item year animation-delay-1">
+                        <div class="project-description__top-item year">
                             <div class="project-description__top-title">год</div>
                             <div class="project-description__top-text">2021</div>
                         </div>
-                        <div class="project-description__top-item object animation-delay-12">
+                        <div class="project-description__top-item object2">
                             <div class="project-description__top-title">Объект</div>
                             <div class="project-description__top-text">2-х комнатная квартира</div>
                         </div>
@@ -226,7 +251,7 @@
                 <div class="project-description__container">
                     <div class="project-description__text">
                         <div class="slide-down-in-view__container">
-                            <div class="slide-down-in-view duration-1 animation-delay-1">
+                            <div class="slide-down-in-view duration-1">
                                 Современный дизайн-проект интерьера квартиры в Москве.<br>
                                 Лаконичность, функциональность и изысканная брутальность –<br>
                                 именно так можно описать эту квартиру площадью 55 кв м,<br>
@@ -244,7 +269,7 @@
             <div class="project-gallery__container">
                 <div class="project-gallery__container-animation">
                     <div class="project-gallery__content">
-                        <div class="project-gallery__img">
+                        <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation plan">
                                 <img src="../assets/images/plan.png" alt="">
                             </div>
@@ -252,7 +277,7 @@
                         <div class="project-gallery__planning">
                             <div class="project-gallery__title">
                                 <div class="slide-down-in-view__container">
-                                    <div class="slide-down-in-view duration-1 animation-delay-05">
+                                    <div class="slide-down-in-view duration-1">
                                         Планировка,<br>
                                         которой мы<br>
                                         городимся
@@ -261,7 +286,7 @@
                             </div>
                             <div class="project-gallery__text">
                                 <div class="slide-up-in-view__container">
-                                    <div class="slide-up-in-view duration-1 animation-delay-05">
+                                    <div class="slide-up-in-view duration-1">
                                         Создана с учетом комфорта и функциональности, продуманная до мельчайших деталей.
                                         Пространство организовано так, чтобы каждый уголок дома стал местом уюта и вдохновения,
                                         подчеркивая уникальный стиль и продуманность каждой зоны
@@ -271,50 +296,50 @@
                         </div>
                     </div>
                     <div class="project-gallery__content">
-                        <div class="project-gallery__img">
+                        <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery1.png" alt="">
                             </div>
                         </div>
-                        <div class="project-gallery__img">
+                        <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery2.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="project-gallery__content">
-                        <div class="project-gallery__img-big">
+                        <div class="project-gallery__img-big white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery3.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="project-gallery__content">
-                        <div class="project-gallery__img">
+                        <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery4.png" alt="">
                             </div>
                         </div>
-                        <div class="project-gallery__img">
+                        <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery5.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="project-gallery__content">
-                        <div class="project-gallery__img-big">
+                        <div class="project-gallery__img-big white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery6.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="project-gallery__content">
-                        <div class="project-gallery__img">
+                        <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery7.png" alt="">
                             </div>
                         </div>
-                        <div class="project-gallery__img">
+                        <div class="project-gallery__img white-header scale-into-view">
                             <div class="project-gallery__img-animation">
                                 <img src="../assets/images/gallery8.png" alt="">
                             </div>
@@ -330,11 +355,11 @@
                 <div class="feedback__content">
                     <div class="feedback__top">
                         <div class="feedback__top-animation">
-                            <div class="feedback__title">
+                            <div class="feedback__title scale-into-view">
                                 Проектирование и ремонт могут<br>
                                 быть приятными и увлекательными
                             </div>
-                            <div class="feedback__title-desc">
+                            <div class="feedback__title-desc scale-into-view">
                                 А результат будет радовать <br class="br-mob"> Вас долгие годы
                             </div>
                         </div>
@@ -369,7 +394,7 @@
                             </div>
                             <div class="feedback-form__err">Это поле обязательно</div>
                             <div class="feedback-form__desc">
-                                <div class="slide-down-in-view__container">
+                                <div class="animation-slide-down__container">
                                     <div class="slide-down-in-view duration-1">
                                         Отправляя форму, вы принимаете<br>
                                         пользовательское соглашение
@@ -414,13 +439,13 @@
                             </div>
                         </div>
                         <div class="feedback__img">
-                            <div class="feedback__img-animation">
+                            <div class="feedback__img-animation white-header">
                                 <img class="scale-into-view" src="../assets/images/feedback.png" alt="">
                             </div>
                         </div>
                         <div class="feedback__info">
                             <div class="feedback__info-title">
-                                <div class="slide-down-in-view__container">
+                                <div class="animation-slide-down__container">
                                     <div class="slide-down-in-view duration-1">
                                         Подводя итоги,<br>
                                         Вы получаете
