--- a/src/pages/prices.html
+++ b/src/pages/prices.html
@@ -15,21 +15,16 @@
 <body class="isLoading">
 <header class="header white">
     <div class="header__container">
-        <nav class="header__menu">
-            <ul>
-                <li class="header__menu-item"><a href="#">Услуги</a></li>
-                <li class="header__menu-item"><a href="#">цены</a></li>
-                <li class="header__menu-item"><a href="#">Проекты</a></li>
-                <li class="header__menu-item"><a href="#">О нас</a></li>
-                <li class="header__menu-item"><a href="#">Контакты</a></li>
-            </ul>
-        </nav>
         <div class="mob-header-icon">
             <svg class="mob-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M3 5H21" stroke="#FFFEF8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M3 12H21" stroke="#FFFEF8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M3 19H21" stroke="#FFFEF8" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
+        </div>
+        <div class="mob-cross close-menu">
+            <div class="mob-cross-line"></div>
+            <div class="mob-cross-line"></div>
         </div>
         <a href="#" class="logo">
             <svg class="logo-top" viewBox="0 0 140 35" xmlns="http://www.w3.org/2000/svg">
@@ -51,6 +46,36 @@
             <svg class="icon-phone" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M21.97 18.33C21.97 18.69 21.89 19.06 21.72 19.42C21.55 19.78 21.33 20.12 21.04 20.44C20.55 20.98 20.01 21.37 19.4 21.62C18.8 21.87 18.15 22 17.45 22C16.43 22 15.34 21.76 14.19 21.27C13.04 20.78 11.89 20.12 10.75 19.29C9.6 18.45 8.51 17.52 7.47 16.49C6.44 15.45 5.51 14.36 4.68 13.22C3.86 12.08 3.2 10.94 2.72 9.81C2.24 8.67 2 7.58 2 6.54C2 5.86 2.12 5.21 2.36 4.61C2.6 4 2.98 3.44 3.51 2.94C4.15 2.31 4.85 2 5.59 2C5.87 2 6.15 2.06 6.4 2.18C6.66 2.3 6.89 2.48 7.07 2.74L9.39 6.01C9.57 6.26 9.7 6.49 9.79 6.71C9.88 6.92 9.93 7.13 9.93 7.32C9.93 7.56 9.86 7.8 9.72 8.03C9.59 8.26 9.4 8.5 9.16 8.74L8.4 9.53C8.29 9.64 8.24 9.77 8.24 9.93C8.24 10.01 8.25 10.08 8.27 10.16C8.3 10.24 8.33 10.3 8.35 10.36C8.53 10.69 8.84 11.12 9.28 11.64C9.73 12.16 10.21 12.69 10.73 13.22C11.27 13.75 11.79 14.24 12.32 14.69C12.84 15.13 13.27 15.43 13.61 15.61C13.66 15.63 13.72 15.66 13.79 15.69C13.87 15.72 13.95 15.73 14.04 15.73C14.21 15.73 14.34 15.67 14.45 15.56L15.21 14.81C15.46 14.56 15.7 14.37 15.93 14.25C16.16 14.11 16.39 14.04 16.64 14.04C16.83 14.04 17.03 14.08 17.25 14.17C17.47 14.26 17.7 14.39 17.95 14.56L21.26 16.91C21.52 17.09 21.7 17.3 21.81 17.55C21.91 17.8 21.97 18.05 21.97 18.33Z" fill="#FFFEF8"/>
             </svg>
+        </div>
+    </div>
+    <div class="mobile-menu">
+        <nav class="header__menu">
+            <ul>
+                <li class="header__menu-item"><a href="#">Услуги</a></li>
+                <li class="header__menu-item"><a href="#">цены</a></li>
+                <li class="header__menu-item"><a href="#">Проекты</a></li>
+                <li class="header__menu-item"><a href="#">О нас</a></li>
+                <li class="header__menu-item"><a href="#">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="mobile-menu__phone"><div>+7 963 77 9999 2</div></div>
+        <div class="mobile-menu__city"><div>Санкт-Петербург</div></div>
+        <div class="mobile-menu__gray-line"></div>
+        <div class="mobile-menu__button-anchor black-button">
+            <div class="main-view__button-text-wrapper">
+                <div class="main-view__button-text">оставить<br/>заявку</div>
+            </div>
+            <div class="main-view__arrow-wrapper">
+                <div class="main-view__arrow">
+                    <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="animation-button-height">
+                <div class="round-button"></div>
+            </div>
         </div>
     </div>
 </header>
@@ -83,21 +108,21 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="animation-button-height animation-height animation-delay-1">
+                    <div class="animation-button-height animation-height">
                         <div class="round-button"></div>
                     </div>
                 </div>
                 <div class="prices__title">
                     <div class="slide-down-in-view__container">
-                        <div class="slide-down-in-view duration-1 animation-delay-05">
+                        <div class="slide-down-in-view duration-1">
                             цены
                         </div>
                     </div>
                 </div>
-                <div class="prices__gray-line"></div>
+                <div class="prices__gray-line"><div class="gray-line"></div></div>
                 <div class="prices__text">
                     <div class="slide-up-in-view__container">
-                        <div class="slide-up-in-view duration-1 animation-delay-05">
+                        <div class="slide-up-in-view duration-1">
                             Познакомьтесь с нашими ценами, и создайте свое<br>
                             идеальное пространство
                         </div>
@@ -137,7 +162,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="prices-design__gray-line"></div>
+                                <div class="prices-design__gray-line"><div class="gray-line"></div></div>
                                 <div class="prices-design__fields">
                                     <div class="prices-design__field slide-left-in-view">Обмер</div>
                                     <div class="prices-design__field slide-left-in-view">Планировки с расстановкой мебели</div>
@@ -166,7 +191,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="prices-design__gray-line"></div>
+                                <div class="prices-design__gray-line"><div class="gray-line"></div></div>
                                 <div class="prices-design__fields">
                                     <div class="prices-design__field slide-left-in-view">Планировки</div>
                                     <div class="prices-design__field slide-left-in-view">Визуализации</div>
@@ -196,7 +221,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="prices-design__gray-line"></div>
+                                <div class="prices-design__gray-line"><div class="gray-line"></div></div>
                                 <div class="prices-design__fields">
                                     <div class="prices-design__field slide-left-in-view">Обмер</div>
                                     <div class="prices-design__field slide-left-in-view">Планировки с расстановкой мебели</div>
@@ -230,14 +255,14 @@
                         </div>
                         <div class="price-supervision__price">
                             <div class="slide-down-in-view__container">
-                                <div class="slide-down-in-view duration-1 animation-delay-1">
+                                <div class="slide-down-in-view duration-1">
                                     от 120 000 ₽ / месяц
                                 </div>
                             </div>
                         </div>
                         <div class="price-supervision__text">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1 animation-delay-15">
+                                <div class="slide-up-in-view duration-1">
                                     Полный контроль<br>
                                     над реализацией вашего<br>
                                     проекта
@@ -253,17 +278,17 @@
                     <div class="price-supervision__gray-line"></div>
                     <div class="price-supervision__button-anchor black-button">
                         <div class="main-view__button-text-wrapper">
-                            <div class="main-view__button-text animation-delay-15">ознакомиться <br>с услугой</div>
+                            <div class="main-view__button-text">ознакомиться <br>с услугой</div>
                         </div>
                         <div class="main-view__arrow-wrapper">
-                            <div class="main-view__arrow animation-delay-15">
+                            <div class="main-view__arrow">
                                 <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                     <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                 </svg>
                             </div>
                         </div>
-                        <div class="animation-button-height animation-height animation-delay-15">
+                        <div class="animation-button-height animation-height">
                             <div class="round-button"></div>
                         </div>
                     </div>
@@ -292,12 +317,12 @@
                         <div class="price-assembly__description">
                             <div class="price-assembly__description-left">
                                 <div class="slide-down-in-view__container">
-                                    <div class="slide-down-in-view duration-1 animation-delay-1">10%</div>
+                                    <div class="slide-down-in-view duration-1">10%</div>
                                 </div>
                             </div>
                             <div class="price-assembly__description-right">
                                 <div class="slide-down-in-view__container">
-                                    <div class="slide-down-in-view duration-1 animation-delay-1">
+                                    <div class="slide-down-in-view duration-1">
                                         от сметы<br>
                                         на чистовые<br>
                                         материалы и мебель
@@ -307,14 +332,14 @@
                         </div>
                         <div class="price-assembly__text">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1 animation-delay-15">
+                                <div class="slide-up-in-view duration-1">
                                     Услуга предоставляется только при заказе<br>
                                     «Авторского надзора»
                                 </div>
                             </div>
                             <div class="price-assembly__text-spicer"></div>
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1 animation-delay-15">
+                                <div class="slide-up-in-view duration-1">
                                     Все цены зависят от текущих условий<br>
                                     на рынке, курсов валют и других факторов.
                                 </div>
@@ -324,17 +349,17 @@
                     <div class="price-assembly__gray-line"></div>
                     <div class="price-assembly__button-anchor black-button">
                         <div class="main-view__button-text-wrapper">
-                            <div class="main-view__button-text animation-delay-15">ознакомиться <br>с услугой</div>
+                            <div class="main-view__button-text">ознакомиться <br>с услугой</div>
                         </div>
                         <div class="main-view__arrow-wrapper">
-                            <div class="main-view__arrow animation-delay-15">
+                            <div class="main-view__arrow">
                                 <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                     <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
                                 </svg>
                             </div>
                         </div>
-                        <div class="animation-button-height animation-height animation-delay-15">
+                        <div class="animation-button-height animation-height">
                             <div class="round-button"></div>
                         </div>
                     </div>
@@ -370,7 +395,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="prices-design__gray-line"></div>
+                                <div class="prices-design__gray-line"><div class="gray-line"></div></div>
                                 <div class="prices-design__fields">
                                     <div class="prices-design__field slide-left-in-view">До 3-х участков</div>
                                     <div class="prices-design__field slide-left-in-view">Выезд в один день</div>
@@ -400,7 +425,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="prices-design__gray-line"></div>
+                                <div class="prices-design__gray-line"><div class="gray-line"></div></div>
                                 <div class="prices-design__fields">
                                     <div class="prices-design__field slide-left-in-view">Разработка схемы генерального плана участка</div>
                                     <div class="prices-design__field slide-left-in-view">Планировка всех этажей</div>
@@ -430,7 +455,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="prices-design__gray-line"></div>
+                                <div class="prices-design__gray-line"><div class="gray-line"></div></div>
                                 <div class="prices-design__fields">
                                     <div class="animation-slide-left__container">
                                         <div class="animation-slide-left duration-1 animation-delay-05">
@@ -456,11 +481,11 @@
                 <div class="feedback__content">
                     <div class="feedback__top">
                         <div class="feedback__top-animation">
-                            <div class="feedback__title">
+                            <div class="feedback__title scale-into-view">
                                 Проектирование и ремонт могут<br>
                                 быть приятными и увлекательными
                             </div>
-                            <div class="feedback__title-desc">
+                            <div class="feedback__title-desc scale-into-view">
                                 А результат будет радовать <br class="br-mob"> Вас долгие годы
                             </div>
                         </div>
@@ -495,7 +520,7 @@
                             </div>
                             <div class="feedback-form__err">Это поле обязательно</div>
                             <div class="feedback-form__desc">
-                                <div class="slide-down-in-view__container">
+                                <div class="animation-slide-down__container">
                                     <div class="slide-down-in-view duration-1">
                                         Отправляя форму, вы принимаете<br>
                                         пользовательское соглашение
@@ -540,13 +565,13 @@
                             </div>
                         </div>
                         <div class="feedback__img">
-                            <div class="feedback__img-animation">
+                            <div class="feedback__img-animation white-header">
                                 <img class="scale-into-view" src="../assets/images/feedback.png" alt="">
                             </div>
                         </div>
                         <div class="feedback__info">
                             <div class="feedback__info-title">
-                                <div class="slide-down-in-view__container">
+                                <div class="animation-slide-down__container">
                                     <div class="slide-down-in-view duration-1">
                                         Подводя итоги,<br>
                                         Вы получаете
