--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -6,9 +6,9 @@
     <title>MART</title>
     <link rel="stylesheet" href="../assets/css/fonts.css">
     <link rel="stylesheet" href="../assets/css/set.css">
-    <link rel="stylesheet" href="../assets/scss/style.css">
-    <link rel="stylesheet" href="../assets/scss/animations.css">
-    <link rel="stylesheet" href="../assets/scss/mobile.css">
+    <link rel="stylesheet" href="../assets/scss/style5.css">
+    <link rel="stylesheet" href="../assets/scss/animations5.css">
+    <link rel="stylesheet" href="../assets/scss/mobile5.css">
     <link rel="stylesheet" href="../assets/css/swiper.css">
     <link rel="stylesheet" href="../assets/css/pageable.css">
 </head>
@@ -546,7 +546,7 @@
 <script src="../assets/js/jquery.min.js"></script>
 <script src="../assets/js/pageable.js"></script>
 <script src="../assets/js/swiper.js"></script>
-<script src="../assets/js/main2.js"></script>
+<script src="../assets/js/main5.js"></script>
 <script src="../assets/js/scrollreveal.js"></script>
 </body>
 </html>
