new header all pages

--- a/src/pages/_service-architecture.html
+++ b/src/pages/_service-architecture.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="architecture-main" class="white-header">
+    <div data-anchor="architecture-main" class="white-header giga-white-header">
         <section class="architecture-main">
             <div class="architecture-main__bg">
                 <div class="architecture-main__bg-animation">
