--- a/src/pages/_service-design.html
+++ b/src/pages/_service-design.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="design-main" class="white-header">
+    <div data-anchor="design-main" class="white-header giga-white-header">
         <section class="design-main">
             <div class="design-main__bg">
                 <div class="design-main__bg-animation">
