--- a/src/pages/contacts.html
+++ b/src/pages/contacts.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div class="contacts">
+    <div class="contacts giga-white-header">
         <section class="contacts-page">
             <div class="contacts-page__top">
                 <div class="about-section__content">
