--- a/src/pages/prices.html
+++ b/src/pages/prices.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="prices" class="white-header mb-8">
+    <div data-anchor="prices" class="white-header giga-white-header mb-8">
         <section class="prices">
             <div class="prices__content">
                 <div class="prices__button-anchor">
