--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="project" class="white-header mb-8">
+    <div data-anchor="project" class="white-header giga-white-header mb-8">
         <section class="project">
             <div class="project__container">
                 <div class="project__content">
