--- a/src/pages/service-vision.html
+++ b/src/pages/service-vision.html
@@ -92,7 +92,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="vision-main" class="white-header mb-8">
+    <div data-anchor="vision-main" class="white-header giga-white-header mb-8">
         <section class="vision-main">
             <div class="vision-main__bg">
                 <div class="architecture-main__bg-animation">
