--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="about-section" class="white-header mb-8">
+    <div data-anchor="about-section" class="white-header giga-white-header mb-8">
         <section class="about-section">
             <div class="about-section__container">
                 <div class="about-section__bg">
