--- a/src/pages/service-complectation.html
+++ b/src/pages/service-complectation.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/css/swiper.css">
 </head>
 <body class="isLoading">
-<header class="header white">
+<header class="header white giga-white-header">
     <div class="header__container">
         <div class="mob-header-icon">
             <svg class="mob-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
