правки, все, кроме услуг

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
             <div><a href="pages/prices.html">Цены</a></div>
             <div><a href="pages/projects.html">Проекты</a></div>
             <div><a href="pages/project.html">Проект</a></div>
-            <div><a href="pages/_services.html">Услуги</a></div>
-            <div><a href="pages/_service-design.html">Дизайн/услуга</a></div>
-            <div><a href="pages/_service-architecture.html">Архитектура/услуга</a></div>
+            <div><a href="pages/services.html">Услуги</a></div>
+            <div><a href="pages/service-design.html">Дизайн/услуга</a></div>
+            <div><a href="pages/service-architecture.html">Архитектура/услуга</a></div>
             <div><a href="pages/service-complectation.html">Комплектация/услуга</a></div>
             <div><a href="pages/service-vision.html">Надзор/услуга</a></div>
         </div>
