--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -128,7 +128,7 @@
                     <div class="about-section__gray-line"><div class="gray-line"></div></div>
                     <div class="about-section__text">
                         <div class="slide-up-in-view__container">
-                            <div class="slide-up-in-view duration-1">
+                            <div class="slide-up-in-view100 duration-1">
                                 Познакомьтесь с нашей командой дизайнеров и создайте<br>
                                 свое идеальное пространство
                             </div>
@@ -138,7 +138,7 @@
             </div>
         </section>
     </div>
-    <div data-anchor="about-advantages">
+    <div class="mb-8" data-anchor="about-advantages">
         <section class="about-advantages">
             <div class="about-advantages__scroll">
                 <div class="about-advantages__content">
