--- a/src/pages/prices.html
+++ b/src/pages/prices.html
@@ -93,47 +93,45 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="prices" class="white-header giga-white-header mb-8">
-        <section class="prices">
-            <div class="prices__content">
-                <div class="prices__button-anchor">
-                    <div class="main-view__button-text-wrapper">
-                        <div class="main-view__button-text">оставить<br>заявку</div>
-                    </div>
-                    <div class="main-view__arrow-wrapper">
-                        <div class="main-view__arrow">
-                            <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                                <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="animation-button-height animation-height">
-                        <div class="round-button"></div>
+    <section class="prices giga-white-header mb-8">
+        <div class="prices__content">
+            <div class="prices__button-anchor">
+                <div class="main-view__button-text-wrapper">
+                    <div class="main-view__button-text">оставить<br>заявку</div>
+                </div>
+                <div class="main-view__arrow-wrapper">
+                    <div class="main-view__arrow">
+                        <svg class="icon-arrow-right" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14.4297 5.92969L20.4997 11.9997L14.4297 18.0697" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                            <path d="M3.5 12H20.33" stroke="#FFFEF8" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg>
                     </div>
                 </div>
-                <div class="prices__title">
-                    <div class="slide-down-in-view__container">
-                        <div class="slide-down-in-view duration-1">
-                            цены
-                        </div>
-                    </div>
+                <div class="animation-button-height animation-height">
+                    <div class="round-button"></div>
                 </div>
-                <div class="prices__gray-line"><div class="gray-line"></div></div>
-                <div class="prices__text">
-                    <div class="slide-up-in-view__container">
-                        <div class="slide-up-in-view duration-1">
-                            Познакомьтесь с нашими ценами, и создайте свое<br>
-                            идеальное пространство
-                        </div>
+            </div>
+            <div class="prices__title">
+                <div class="slide-down-in-view__container">
+                    <div class="slide-down-in-view duration-1">
+                        цены
                     </div>
                 </div>
             </div>
-            <div class="prices__bg">
-                <img src="../assets/images/prices.png" alt="">
+            <div class="prices__gray-line"><div class="gray-line"></div></div>
+            <div class="prices__text">
+                <div class="slide-up-in-view__container">
+                    <div class="slide-up-in-view duration-1">
+                        Познакомьтесь с нашими ценами, и создайте свое<br>
+                        идеальное пространство
+                    </div>
+                </div>
             </div>
-        </section>
-    </div>
+        </div>
+        <div class="prices__bg">
+            <img src="../assets/images/prices.png" alt="">
+        </div>
+    </section>
     <div animation-mob-steps="3" animation-step="0" class="animation-state-0" data-anchor="prices-design">
         <section class="prices-design">
             <div class="prices-design__scroll">
@@ -239,7 +237,7 @@
             </div>
         </section>
     </div>
-    <div data-anchor="price-supervision">
+    <div class="mb-8" data-anchor="price-supervision">
         <section class="price-supervision">
             <div class="price-supervision__scroll">
                 <div class="price-supervision__content">
@@ -458,7 +456,7 @@
                                 <div class="prices-design__gray-line"><div class="gray-line"></div></div>
                                 <div class="prices-design__fields">
                                     <div class="animation-slide-left__container">
-                                        <div class="animation-slide-left duration-1 animation-delay-05">
+                                        <div class="animation-slide-left duration-1">
                                             Мы сопровождаем проектирование инженерии, конструктива, ландшафта, строительство объекта
                                         </div>
                                     </div>
