--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../assets/css/pageable.css">
 </head>
 <body class="isLoading">
-<header class="header">
+<header class="header white-bg">
     <div class="header__container">
         <div class="mob-header-icon">
             <svg class="mob-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div class="projects-section">
+    <div class="projects-section mb-8">
         <section class="projects">
             <div class="projects__button-anchor">
                 <div class="main-view__button-text-wrapper">
