--- a/src/pages/project.html
+++ b/src/pages/project.html
@@ -146,7 +146,7 @@
             </div>
         </section>
     </div>
-    <div animation-mob-steps="2" animation-step="0" class="animation-state-0" data-anchor="project-details">
+    <div data-anchor="project-details">
         <section class="project-details">
             <div class="project-details__scroll">
                 <div class="project-details__container">
@@ -226,7 +226,7 @@
         <section class="project-description">
             <div class="project-description__content">
                 <div class="project-description__gray-line"></div>
-                <div class="project-description__top">
+                <div class="project-description__top scale-into-view">
                     <div class="project-description__top-item">
                         <div class="project-description__top-title">Расположение</div>
                         <div class="project-description__top-text">Москва</div>
@@ -251,7 +251,7 @@
                 <div class="project-description__container">
                     <div class="project-description__text">
                         <div class="slide-down-in-view__container">
-                            <div class="slide-down-in-view duration-1">
+                            <div class="slide-down-in-view150 duration-1">
                                 Современный дизайн-проект интерьера квартиры в Москве.<br>
                                 Лаконичность, функциональность и изысканная брутальность –<br>
                                 именно так можно описать эту квартиру площадью 55 кв м,<br>
@@ -264,7 +264,7 @@
             </div>
         </section>
     </div>
-    <div animation-mob-steps="6" animation-steps="6" animation-step="-1" data-anchor="project-gallery" class="animation-state-0">
+    <div data-anchor="project-gallery">
         <section class="project-gallery">
             <div class="project-gallery__container">
                 <div class="project-gallery__container-animation">
@@ -277,7 +277,7 @@
                         <div class="project-gallery__planning">
                             <div class="project-gallery__title">
                                 <div class="slide-down-in-view__container">
-                                    <div class="slide-down-in-view duration-1">
+                                    <div class="slide-down-in-view150 duration-1">
                                         Планировка,<br>
                                         которой мы<br>
                                         городимся
@@ -286,7 +286,7 @@
                             </div>
                             <div class="project-gallery__text">
                                 <div class="slide-up-in-view__container">
-                                    <div class="slide-up-in-view duration-1">
+                                    <div class="slide-up-in-view150 duration-1">
                                         Создана с учетом комфорта и функциональности, продуманная до мельчайших деталей.
                                         Пространство организовано так, чтобы каждый уголок дома стал местом уюта и вдохновения,
                                         подчеркивая уникальный стиль и продуманность каждой зоны
@@ -349,7 +349,7 @@
             </div>
         </section>
     </div>
-    <div animation-mob-steps="2" animation-step="0" class="fade-in" data-anchor="feedback">
+    <div class="fade-in" data-anchor="feedback">
         <section class="feedback">
             <div class="feedback__scroll">
                 <div class="feedback__content">
