--- a/src/pages/service-complectation.html
+++ b/src/pages/service-complectation.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/css/swiper.css">
 </head>
 <body class="isLoading">
-<header class="header white giga-white-header">
+<header class="header white">
     <div class="header__container">
         <div class="mob-header-icon">
             <svg class="mob-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -92,7 +92,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="complectation" class="white-header mb-8">
+    <div data-anchor="complectation" class="white-header giga-white-header mb-8">
         <section class="complectation">
             <div class="complectation__bg">
                 <div class="complectation__bg-animation">
@@ -111,7 +111,7 @@
                     <div class="complectation__content-bottom">
                         <div class="complectation__description">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1">
+                                <div class="slide-up-in-view150 duration-1">
                                     Полный контроль<br>
                                     над процессом закупок<br>
                                     и поставок
@@ -120,7 +120,7 @@
                         </div>
                         <div class="complectation__text">
                             <div class="slide-up-in-view__container">
-                                <div class="slide-up-in-view duration-1">
+                                <div class="slide-up-in-view150 duration-1">
                                     Мы возьмём на себя всю работу по подбору материалов, мебели и отделки для вашего проекта.
                                     От разработки бюджета до координации поставок — мы организуем каждый шаг с максимальной
                                     точностью и вниманием к деталям.
@@ -215,7 +215,7 @@
             </div>
         </section>
     </div>
-    <div animation-mob-steps="3" animation-step="0" class="animation-state-0" data-anchor="steps">
+    <div class="mb-8" data-anchor="steps">
         <section class="steps compl">
             <div class="steps__scroll">
                 <div class="steps__container">
