--- a/src/pages/service-design.html
+++ b/src/pages/service-design.html
@@ -93,7 +93,7 @@
     </div>
 </div>
 <div id="container">
-    <div data-anchor="design-main" class="white-header giga-white-header">
+    <div data-anchor="design-main" class="white-header giga-white-header mb-8">
         <section class="design-main">
             <div class="design-main__bg">
                 <div class="design-main__bg-animation">
@@ -378,7 +378,7 @@
             </div>
         </section>
     </div>
-    <div data-anchor="design-components">
+    <div class="mb-8" data-anchor="design-components">
         <section class="design-components">
             <div class="design-components__scroll">
                 <div class="design-components__content">
