--- a/src/pages/service-vision.html
+++ b/src/pages/service-vision.html
@@ -128,14 +128,14 @@
                 <div class="vision-main__content">
                     <div class="vision-main__title">
                         <div class="slide-down-in-view__container">
-                            <div class="slide-down-in-view duration-1">
+                            <div class="slide-down-in-view100 duration-1">
                                 Авторский
                             </div>
                         </div>
                     </div>
                     <div class="vision-main__title">
                         <div class="slide-up-in-view__container">
-                            <div class="slide-up-in-view duration-1">
+                            <div class="slide-up-in-view100 duration-1">
                                 надзор
                             </div>
                         </div>
