--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../assets/css/pageable.css">
 </head>
 <body class="isLoading">
-    <header class="header">
+    <header class="header white-bg">
     <div class="header__container">
         <div class="mob-header-icon">
             <svg class="mob-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
