projects and footer fix

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -116,7 +116,8 @@
                     <div class="slide-down-in-view__container">
                         <div class="projects-top__title slide-down-in-view100 duration-1">
                             Познакомьтесь<br>
-                            с нашими проектами
+                            с нашими проектами<br>
+                            и убедитесь сами
                         </div>
                     </div>
                     <div class="projects-top__right">
